@@ -172,14 +172,20 @@ work. Any value not specified will use its default value if it has one if not it
         | `horizontal_position`         | **Description:** Choose the horizontal position for the flag group.<br>**Default:** `left`<br>**Values:** `left`, `left2`, `center`, `center_left`, `center_right`, `right` or `right2`                                                                                                                                       |
         | `vertical_position`           | **Description:** Choose the vertical position for the flag group.<br>**Default:** `top`<br>**Values:** `top`, `top2`, `top3`, `center`, `center_top`, `center_bottom`, `bottom`, `bottom2` or `bottom3`                                                                                                                       |
         | `overlay_limit`               | **Description:** Choose the number of overlay this queue displays.<br>**Default:** `3`<br>**Values:** `1`, `2`, `3`, `4`, or `5`                                                                                                                                                                                              |
+        | `size`                        | **Description:** Controls the size of the overlay.<br>**Default: small** <br>**Values:** `small` or `big`                                                                                                                                                                                                                     |        
         | `group_alignment`             | **Description:** Choose the display alignment for the flag group.<br>**Default:** `vertical`<br>**Values:** `horizontal`, or `vertical`                                                                                                                                                                                       |
         | `style`                       | **Description:** Controls the visual theme of the overlays created.<table class="clearTable"><tr><th>Values:</th></tr><tr><td><code>round</code></td><td>Round Theme</td></tr><tr><td><code>square</code></td><td>Square Theme</td></tr><tr><td><code>half</code></td><td>Square Flag with Round Background</td></tr></table> |
         | `flag_alignment`              | **Description:** Controls the flag alignment in the backdrop.<br>**Default:** `left`<br>**Values:** `left` or `right`                                                                                                                                                                                                         |
         | `offset`                      | **Description:** Controls the offset between the flag and the text.<br>**Default:** `10`<br>**Values:** Any Integer 0 or greater                                                                                                                                                                                              |
+        | `hide_text`                   | **Description:** Disables the country code text, showing only the flag.<br>**Default: `false` <br>**Values:** `true` to hide the country text                                                                                                                                                                                 |
         | `use_lowercase`               | **Description:** Controls if the overlay display is in lowercase.<br>**Values:** `true` to use lowercase text                                                                                                                                                                                                                 |
         | `position`                    | **Description:** Use the Custom Given Queue instead of the the provided Queues.<br>**Values:** List of Coordinates                                                                                                                                                                                                            |
         | `country_<<key>>`<sup>1</sup> | **Description:** Controls the country image for the Overlay.<br>**Default:** Listed in the [Table](#supported-audiosubtitle-language-flags) above<br>**Values:** [ISO 3166-1 Country Code](https://en.wikipedia.org/wiki/List_of_ISO_3166_country_codes) for the flag desired                                                 |
         | `weight_<<key>>`<sup>1</sup>  | **Description:** Controls the weight of the Overlay. Higher numbers have priority.<br>**Values:** Any Number                                                                                                                                                                                                                  |
+        | `vertical_spacing`            | **Description:** Controls the vertical spacing from one overlay in the queue to the next.<br>**Values:** Any Integer                                                                                                                                                                                                          |
+        | `horizontal_spacing`          | **Description:** Controls the vertical spacing from one overlay in the queue to the next.<br>**Values:** Any Integer                                                                                                                                                                                                          |
+        | `initial_vertical_offset`     | **Description:** Controls the initial vertical offset the queue starts from.<br>**Values:** Any Integer                                                                                                                                                                                                                       |
+        | `initial_horizontal_offset`   | **Description:** Controls the initial horizontal offset the queue starts from.<br>**Values:** Any Integer                                                                                                                                                                                                                     |
 
         1. Each default overlay has a `key` that when calling to effect a specific overlay you must replace `<<key>>` 
         with when calling.
